artifacts/QuixBugs/max_sublist_sum/report.txt
$ paul quixbugs --path . --file max_sublist_sum.py --tests ./python_testcases/test_max_sublist_sum.py


Running PAUL on QuixBugs file 'max_sublist_sum.py'...

Testing suite:
/home/mike/PAUL/QuixBugs/python_testcases/test_max_sublist_sum.py

Building PAUL LangGraph graph...

Graph written to '/home/mike/PAUL/src/paul/resources/graph.png'

Building patcher LLM using 'gpt-4o-mini'...

Building reporter LLM using 'gpt-4o-mini'...

Building complete in 0.1808 seconds

Working on a patch...

Using 'read_file' tool with args: {'file_path': 'python_programs/max_sublist_sum.py'}
Read tool used. Returning to patcher...

Using 'list_directory' tool with args: {'dir_path': 'python_testcases'}
Read tool used. Returning to patcher...

Using 'read_file' tool with args: {'file_path': 'python_testcases/test_max_sublist_sum.py'}
Read tool used. Returning to patcher...

Using 'write_file' tool with args: {'file_path': 'python_programs/max_sublist_sum.py', 'text': '    if max_ending_here < 0:\n        max_ending_here = 0\n', 'append': True}
Write tool used. Proceeding to verifier...

Saving modified file to '/home/mike/PAUL/src/paul/patches/patch_0_max_sublist_sum.py'

Verifying...

Running 'pytest /home/mike/PAUL/QuixBugs/python_testcases/test_max_sublist_sum.py'...
pytest /home/mike/PAUL/QuixBugs/python_testcases/test_max_sublist_sum.py failed.
STDOUT:
============================= test session starts ==============================
platform linux -- Python 3.12.3, pytest-8.4.1, pluggy-1.6.0 -- /home/mike/PAUL/paul_venv/bin/python
cachedir: .pytest_cache
rootdir: /home/mike/PAUL
configfile: pyproject.toml
plugins: anyio-4.9.0, langsmith-0.4.5
collecting ... collected 0 items / 1 error

==================================== ERRORS ====================================
______ ERROR collecting QuixBugs/python_testcases/test_max_sublist_sum.py ______
../paul_venv/lib/python3.12/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
../paul_venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../paul_venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
python_testcases/test_max_sublist_sum.py:7: in <module>
    from python_programs.max_sublist_sum import max_sublist_sum
E     File "/home/mike/PAUL/QuixBugs/python_programs/max_sublist_sum.py", line 32
E       if max_ending_here < 0:
E   IndentationError: unexpected indent
=========================== short test summary info ============================
ERROR python_testcases/test_max_sublist_sum.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.11s ===============================

STDERR:


Verification failed. Returning to patcher...

Using 'read_file' tool with args: {'file_path': 'python_programs/max_sublist_sum.py'}
Read tool used. Returning to patcher...

Using 'write_file' tool with args: {'file_path': 'python_programs/max_sublist_sum.py', 'text': '    if max_ending_here < 0:\n        max_ending_here = 0\n', 'append': False}
Write tool used. Proceeding to verifier...

Saving modified file to '/home/mike/PAUL/src/paul/patches/patch_1_max_sublist_sum.py'

Verifying...

Running 'pytest /home/mike/PAUL/QuixBugs/python_testcases/test_max_sublist_sum.py'...
pytest /home/mike/PAUL/QuixBugs/python_testcases/test_max_sublist_sum.py failed.
STDOUT:
============================= test session starts ==============================
platform linux -- Python 3.12.3, pytest-8.4.1, pluggy-1.6.0 -- /home/mike/PAUL/paul_venv/bin/python
cachedir: .pytest_cache
rootdir: /home/mike/PAUL
configfile: pyproject.toml
plugins: anyio-4.9.0, langsmith-0.4.5
collecting ... collected 0 items / 1 error

==================================== ERRORS ====================================
______ ERROR collecting QuixBugs/python_testcases/test_max_sublist_sum.py ______
../paul_venv/lib/python3.12/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
../paul_venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../paul_venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
python_testcases/test_max_sublist_sum.py:7: in <module>
    from python_programs.max_sublist_sum import max_sublist_sum
E     File "/home/mike/PAUL/QuixBugs/python_programs/max_sublist_sum.py", line 1
E       if max_ending_here < 0:
E   IndentationError: unexpected indent
=========================== short test summary info ============================
ERROR python_testcases/test_max_sublist_sum.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.11s ===============================

STDERR:


Verification failed. Returning to patcher...

Using 'read_file' tool with args: {'file_path': 'python_programs/max_sublist_sum.py'}
Read tool used. Returning to patcher...

Using 'write_file' tool with args: {'file_path': 'python_programs/max_sublist_sum.py', 'text': 'def max_sublist_sum(arr):\n    max_ending_here = 0\n    max_so_far = 0\n\n    for x in arr:\n        max_ending_here = max_ending_here + x\n        # Reset max_ending_here if it drops below 0\n        if max_ending_here < 0:\n            max_ending_here = 0\n        max_so_far = max(max_so_far, max_ending_here)\n\n    return max_so_far\n', 'append': False}
Write tool used. Proceeding to verifier...

Saving modified file to '/home/mike/PAUL/src/paul/patches/patch_2_max_sublist_sum.py'

Verifying...

Running 'pytest /home/mike/PAUL/QuixBugs/python_testcases/test_max_sublist_sum.py'...
pytest /home/mike/PAUL/QuixBugs/python_testcases/test_max_sublist_sum.py passed!

Verification passed! Moving to reporter...

Creating report...

Report finished!

PAUL has finished working with an execution time of 18.5080 seconds!

============================== Better Call PAUL! ===============================

Patch Title:	Fix max sublist sum calculation in algorithm

--------------------------------------------------------------------------------
> **Note:** This message was automatically generated by PAUL. Please review the proposed changes carefully.

This patch resolves a bug in the max_sublist_sum function within the max_sublist_sum.py file. The function originally failed to correctly calculate the maximum sublist sum due to improper handling of negative sums. The logic for updating the max_ending_here and max_so_far variables has been corrected to ensure accurate results across all test cases in the associated test file.

Tools Used:
- `read_file` with arguments `{"file_path":"python_programs/max_sublist_sum.py"}`
- `list_directory` with arguments `{"dir_path":"python_testcases"}`
- `read_file` with arguments `{"file_path":"python_testcases/test_max_sublist_sum.py"}`
- `write_file` with arguments `{"file_path":"python_programs/max_sublist_sum.py","text":"    if max_ending_here < 0:\n        max_ending_here = 0\n","append":true}`
- `read_file` with arguments `{"file_path":"python_programs/max_sublist_sum.py"}`
- `write_file` with arguments `{"file_path":"python_programs/max_sublist_sum.py","text":"    if max_ending_here < 0:\n        max_ending_here = 0\n","append":false}`
- `read_file` with arguments `{"file_path":"python_programs/max_sublist_sum.py"}`
- `write_file` with arguments `{"file_path":"python_programs/max_sublist_sum.py","text":"def max_sublist_sum(arr):\n    max_ending_here = 0\n    max_so_far = 0\n\n    for x in arr:\n        max_ending_here = max_ending_here + x\n        # Reset max_ending_here if it drops below 0\n        if max_ending_here < 0:\n            max_ending_here = 0\n        max_so_far = max(max_so_far, max_ending_here)\n\n    return max_so_far\n","append":false}`

Patcher:
	Tokens Used: 14675
	Total Cost (USD): 0.001844
Verifier:
	Failed Attempts: 2
Reporter:
	Tokens Used: 1506
	Total Cost (USD): 0.000282
Total Tokens Used: 16181
Total Cost (USD): 0.002126
Building Time: 0.1808 seconds
Execution Time: 18.5080 seconds

================================================================================
